--- a/page.html
+++ b/page.html
@@ -16,8 +16,9 @@
 </head>
 
 <body>
-
-
+  <div style="text-align:center;">
+    <p><span style="font-size: 2.7em;">smartphone-picker</span></p>
+  </div>
   <p>
     Strict Filtering
   </p>
