--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <script type="text/javascript" src="main.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
   <title>Smartphone-Picker</title>
 
