--- a/page.html
+++ b/page.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="robots" content="noindex, nofollow">
-  <meta name="googlebot" content="noindex, nofollow">
+  <meta name="googlebot" content="index, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script type="text/javascript" src="main.js"></script>
