--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <th style="min-width: 50px;  max-width: 60px">SD-Slot</th>
           <th style="min-width: 50px;  max-width: 60px">Headphone Jack</th>
           <th style="min-width: 50px; max-width: 60px">SIM-Cards</th>
+          <th style="min-width: 100%; max-width: 100%"></th>
 
         </tr>
       </thead>
@@ -128,16 +129,16 @@
           <td>
 
             <span class="rating">
-              <input class="rating-input rating_updater" id="power-input-1-5" name="power-input-1" value="5" type="radio">
-              <label for="power-input-1-5" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="power-input-1-4" name="power-input-1" value="4" type="radio">
-              <label for="power-input-1-4" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="power-input-1-3" name="power-input-1" value="3" type="radio">
-              <label for="power-input-1-3" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="power-input-1-2" name="power-input-1" value="2" type="radio">
-              <label for="power-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="power-input-1-1" name="power-input-1" value="1" type="radio">
-              <label for="power-input-1-1" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="processor-input-1-5" name="processor-input-1" value="5" type="radio">
+              <label for="processor-input-1-5" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="processor-input-1-4" name="processor-input-1" value="4" type="radio">
+              <label for="processor-input-1-4" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="processor-input-1-3" name="processor-input-1" value="3" type="radio">
+              <label for="processor-input-1-3" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="processor-input-1-2" name="processor-input-1" value="2" type="radio">
+              <label for="processor-input-1-2" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="processor-input-1-1" name="processor-input-1" value="1" type="radio">
+              <label for="processor-input-1-1" class="rating-star"></label>
             </span>
 
           </td>
@@ -159,32 +160,32 @@
           <td>
 
             <span class="rating">
-              <input class="rating-input rating_updater" id="rating-input-1-5" name="rating-input-1" value="5" type="radio">
-              <label for="rating-input-1-5" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="rating-input-1-4" name="rating-input-1" value="4" type="radio">
-              <label for="rating-input-1-4" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="rating-input-1-3" name="rating-input-1" value="3" type="radio">
-              <label for="rating-input-1-3" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="rating-input-1-2" name="rating-input-1" value="2" type="radio">
-              <label for="rating-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="rating-input-1-1" name="rating-input-1" value="1" type="radio">
-              <label for="rating-input-1-1" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="camera-input-1-5" name="camera-input-1" value="5" type="radio">
+              <label for="camera-input-1-5" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="camera-input-1-4" name="camera-input-1" value="4" type="radio">
+              <label for="camera-input-1-4" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="camera-input-1-3" name="camera-input-1" value="3" type="radio">
+              <label for="camera-input-1-3" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="camera-input-1-2" name="camera-input-1" value="2" type="radio">
+              <label for="camera-input-1-2" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="camera-input-1-1" name="camera-input-1" value="1" type="radio">
+              <label for="camera-input-1-1" class="rating-star"></label>
             </span>
 
           </td>
           <td>
 
             <span class="rating">
-              <input class="rating-input rating_updater" id="rating-input-2-5" name="rating-input-2" value="5" type="radio">
-              <label for="rating-input-2-5" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="rating-input-2-4" name="rating-input-2" value="4" type="radio">
-              <label for="rating-input-2-4" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="rating-input-2-3" name="rating-input-2" value="3" type="radio">
-              <label for="rating-input-2-3" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="rating-input-2-2" name="rating-input-2" value="2" type="radio">
-              <label for="rating-input-2-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="rating-input-2-1" name="rating-input-2" value="1" type="radio">
-              <label for="rating-input-2-1" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="battery-input-1-5" name="battery-input-2" value="5" type="radio">
+              <label for="battery-input-1-5" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="battery-input-1-4" name="battery-input-2" value="4" type="radio">
+              <label for="battery-input-1-4" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="battery-input-1-3" name="battery-input-2" value="3" type="radio">
+              <label for="battery-input-1-3" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="battery-input-1-2" name="battery-input-2" value="2" type="radio">
+              <label for="battery-input-1-2" class="rating-star"></label>
+              <input class="rating-input rating_updater" id="battery-input-1-1" name="battery-input-2" value="1" type="radio">
+              <label for="battery-input-1-1" class="rating-star"></label>
             </span>
 
           </td>
