More Polish and Smartphones

--- a/index.html
+++ b/index.html
@@ -19,13 +19,26 @@
   <div style="text-align:center;">
     <p><span style="font-size: 2.7em;">smartphone-picker</span></p>
   </div>
-  <p>
-    Strict Filtering
-  </p>
-  <select id="filterInput" class="rating_updater">
+  <div class="float">
+    <p>
+      Strict Filtering
+    </p>
+    <select id="filterInput" class="rating_updater">
     <option value="1" selected="selected">No</option>
     <option value="2">Yes</option>
   </select>
+  </div>
+  <div class="float">
+    <p>
+      Scale smartphones
+    </p>
+    <select id="filterInput" class="rating_updater">
+    <option value="1" selected="selected">No</option>
+    <option value="2">Yes</option>
+  </select>
+  </div>
+  <div style="clear:both;">
+  </div>
   <div style="overflow-x:auto;" class="settingsdiv">
     <table>
       <thead class="settingsTable">
@@ -250,7 +263,7 @@
     <table id="myTable" class="itemsTable">
       <thead>
         <tr>
-          <th style="min-width: 35px;  max-width: 5px">Price</th>
+          <th style="min-width: 75px;  max-width: 75px">Price</th>
           <th style="min-width: 100px; max-width: 100px">Favorite</th>
           <th style="min-width: 100px; max-width: 100px"></th>
           <th style="min-width: 100px; max-width: 100px"></th>
