Popup with Specs now shows when image is clicked

--- a/index.html
+++ b/index.html
@@ -263,17 +263,17 @@
     <table id="myTable" class="itemsTable">
       <thead>
         <tr>
-          <th style="min-width: 75px;  max-width: 75px">Price</th>
-          <th style="min-width: 100px; max-width: 100px">Favorite</th>
-          <th style="min-width: 100px; max-width: 100px"></th>
-          <th style="min-width: 100px; max-width: 100px"></th>
-          <th style="min-width: 100px; max-width: 100px"></th>
-          <th style="min-width: 100px; max-width: 100px"></th>
-          <th style="min-width: 100px; max-width: 100px"></th>
-          <th style="min-width: 100px; max-width: 100px"></th>
-          <th style="min-width: 100px; max-width: 100px"></th>
-          <th style="min-width: 100px; max-width: 100px"></th>
-          <th style="min-width: 100%; max-width: 100%"></th>
+          <th>Price</th>
+          <th>Favorite</th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
