Added an about page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,30 @@
 </head>
 
 <body>
-  <div style="text-align:center;">
-    <p><span style="font-size: 2.7em;">smartphone-picker</span></p>
+  <div style="text-align:left; margin-left: 15%;">
+    <a class="btn btn-link" href="index.html" style="font-size: 43.2px; text-decoration: none; color: #666;">
+                      smartphone-picker
+                  </a>
+  </div>
+  <div class="main-menu">
+    <div class="main-menu-text">
+
+      <div class="btn-group float">
+        <a class="btn btn-link" href="mailto:contact@logicalincrements.com">
+                          Contact
+                      </a>
+      </div>
+
+      <div class="btn-group float">
+        <a class="btn btn-link" href="about.html">
+                          About
+                      </a>
+      </div>
+
+    </div>
+  </div>
+  <div class="description">
+    <p>smartphone-picker helps you choose your next smartphone in this crowded market. Filter the hand-curated list to your liking and click a smartphone to show it's specs.</p>
   </div>
   <div class="float">
     <p>
@@ -150,7 +172,7 @@
               <label for="processor-input-1-3" class="rating-star"></label>
               <input class="rating-input rating_updater" id="processor-input-1-2" name="processor-input-1" value="2" type="radio">
               <label for="processor-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="processor-input-1-1" name="processor-input-1" value="1" type="radio">
+              <input class="rating-input rating_updater" id="processor-input-1-1" name="processor-input-1" value="1" type="radio" checked="checked">
               <label for="processor-input-1-1" class="rating-star"></label>
             </span>
 
@@ -166,7 +188,7 @@
               <label for="updates-input-1-3" class="rating-star"></label>
               <input class="rating-input rating_updater" id="updates-input-1-2" name="updates-input-1" value="2" type="radio">
               <label for="updates-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="updates-input-1-1" name="updates-input-1" value="1" type="radio">
+              <input class="rating-input rating_updater" id="updates-input-1-1" name="updates-input-1" value="1" type="radio" checked="checked">
               <label for="updates-input-1-1" class="rating-star"></label>
             </span>
           </td>
@@ -181,7 +203,7 @@
               <label for="camera-input-1-3" class="rating-star"></label>
               <input class="rating-input rating_updater" id="camera-input-1-2" name="camera-input-1" value="2" type="radio">
               <label for="camera-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="camera-input-1-1" name="camera-input-1" value="1" type="radio">
+              <input class="rating-input rating_updater" id="camera-input-1-1" name="camera-input-1" value="1" type="radio" checked="checked">
               <label for="camera-input-1-1" class="rating-star"></label>
             </span>
 
@@ -197,7 +219,7 @@
               <label for="battery-input-1-3" class="rating-star"></label>
               <input class="rating-input rating_updater" id="battery-input-1-2" name="battery-input-2" value="2" type="radio">
               <label for="battery-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="battery-input-1-1" name="battery-input-2" value="1" type="radio">
+              <input class="rating-input rating_updater" id="battery-input-1-1" name="battery-input-2" value="1" type="radio" checked="checked">
               <label for="battery-input-1-1" class="rating-star"></label>
             </span>
 
@@ -263,7 +285,7 @@
     <table id="myTable" class="itemsTable">
       <thead>
         <tr>
-          <th>Price</th>
+          <th style="min-width:85px">Price</th>
           <th>Favorite</th>
           <th></th>
           <th></th>
@@ -273,7 +295,7 @@
           <th></th>
           <th></th>
           <th></th>
-          <th></th>
+          <th style="width:100%"></th>
         </tr>
       </thead>
       <tbody>
