--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="main-menu-text">
 
       <div class="btn-group float">
-        <a class="btn btn-link" href="mailto:contact@logicalincrements.com">
+        <a class="btn btn-link" href="mailto:admin@smartphone-picker.com">
                           Contact
                       </a>
       </div>
@@ -38,132 +38,133 @@
 
     </div>
   </div>
-  <div class="description">
-    <p>smartphone-picker helps you choose your next smartphone in this crowded market. Filter the hand-curated list to your liking and click a smartphone to show it's specs.</p>
-  </div>
-  <div class="float">
-    <p>
-      Strict Filtering
-    </p>
-    <select id="filterInput" class="rating_updater">
+  <div class="bodydiv">
+    <div class="description">
+      <p>smartphone-picker helps you choose your next smartphone in this crowded market. Filter the hand-curated list to your liking and click a smartphone to show it's specs.</p>
+    </div>
+    <div class="float">
+      <p>
+        Strict Filtering
+      </p>
+      <select id="filterInput" class="rating_updater">
     <option value="1" selected="selected">No</option>
     <option value="2">Yes</option>
   </select>
-  </div>
-  <div class="float">
-    <p>
-      Scale smartphones
-    </p>
-    <select id="filterInput" class="rating_updater">
+    </div>
+    <div class="float">
+      <p>
+        Scale smartphones
+      </p>
+      <select id="filterInput" class="rating_updater">
     <option value="1" selected="selected">No</option>
     <option value="2">Yes</option>
   </select>
-  </div>
-  <div style="clear:both;">
-  </div>
-  <div style="overflow-x:auto;" class="settingsdiv">
-    <table>
-      <thead class="settingsTable">
-        <tr>
-          <th style="min-width: 65px;  max-width: 65px">Price</th>
-          <th style="min-width: 110px; max-width: 110px">Size</th>
-          <th style="min-width: 50px;  max-width: 60px">Processor</th>
-          <th style="min-width: 50px;  max-width: 60px">Software Updates</th>
-          <th style="min-width: 50px;  max-width: 60px">Camera</th>
-          <th style="min-width: 50px;  max-width: 60px">Battery</th>
-          <th style="min-width: 85px;  max-width: 85px">Storage Size</th>
-          <th style="min-width: 50px;  max-width: 60px">SD-Slot</th>
-          <th style="min-width: 50px;  max-width: 60px">Headphone Jack</th>
-          <th style="min-width: 50px; max-width: 60px">SIM-Cards</th>
-          <th style="min-width: 100%; max-width: 100%"></th>
+    </div>
+    <div style="clear:both;">
+    </div>
+    <div style="overflow-x:auto;" class="settingsdiv">
+      <table>
+        <thead class="settingsTable">
+          <tr>
+            <th style="min-width: 70px">Price</th>
+            <th style="min-width: 160px">Size</th>
+            <th style="min-width: 0px">Processor</th>
+            <th style="min-width: 0px">Software Updates</th>
+            <th style="min-width: 0px">Camera</th>
+            <th style="min-width: 0px">Battery</th>
+            <th style="min-width: 120px">Storage Size</th>
+            <th style="min-width: 0px">SD-Slot</th>
+            <th style="min-width: 0px">Headphone Jack</th>
+            <th style="min-width: 0px">SIM-Cards</th>
+            <th style="width: 100%;"></th>
 
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <div class="float">
-              <input id="price_minimum_1" name="price_minimum_1" class="smallInput rating_updater" size="2" type="text">
-              <br>
-            </div>
-            <div class="float">
-              <p>-</p>
-            </div>
-            <div class="float">
-              <input id="price_maximum_1" name="price_maximum_1" class="smallInput rating_updater" size="2" type="text">
-              <br>
-            </div>
-          </td>
-          <td>
-            <table>
-              <tbody>
-                <tr>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <div class="float">
+                <input id="price_minimum_1" name="price_minimum_1" class="smallInput rating_updater" size="2" type="text">
+                <br>
+              </div>
+              <div class="float">
+                <p>-</p>
+              </div>
+              <div class="float">
+                <input id="price_maximum_1" name="price_maximum_1" class="smallInput rating_updater" size="2" type="text">
+                <br>
+              </div>
+            </td>
+            <td>
+              <table>
+                <tbody>
+                  <tr>
 
-                  <td>
-                    <div class="float">
-                      <p>Display</p>
-                    </div>
-                  </td>
-                  <td>
-                    <div class="float">
-                      <input id="size_minimum_1" name="size_minimum_1" class="smallInput rating_updater" size="2" type="text">
-                      <br>
-                    </div>
-                    <div class="float">
-                      <p>-</p>
-                    </div>
-                    <div class="float">
-                      <input id="size_maximum_1" name="size_maximum_1" class="smallInput rating_updater" size="2" type="text">
-                      <br>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="float">
-                      <p>Length</p>
-                    </div>
-                  </td>
-                  <td>
-                    <div class="float">
-                      <input id="size_minimum_2" name="size_minimum_2" class="smallInput rating_updater" size="2" type="text">
-                      <br>
-                    </div>
-                    <div class="float">
-                      <p>-</p>
-                    </div>
-                    <div class="float">
-                      <input id="size_maximum_2" name="size_maximum_2" class="smallInput rating_updater" size="2" type="text">
-                      <br>
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="float">
-                      <p>Width</p>
-                    </div>
-                  </td>
-                  <td>
-                    <div class="float">
-                      <input id="size_minimum_3" name="size_minimum_3" class="smallInput rating_updater" size="2" type="text">
-                      <br>
-                    </div>
-                    <div class="float">
-                      <p>-</p>
-                    </div>
-                    <div class="float">
-                      <input id="size_maximum_3" name="size_maximum_3" class="smallInput rating_updater" size="2" type="text">
-                      <br>
-                    </div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-          <td>
+                    <td style="padding-left:0px; padding-top:0;">
+                      <div class="float">
+                        <p>Display</p>
+                      </div>
+                    </td>
+                    <td style="padding-left:0px; padding-top:0;">
+                      <div class="float">
+                        <input id="size_minimum_1" name="size_minimum_1" class="smallInput rating_updater" size="2" type="text">
+                        <br>
+                      </div>
+                      <div class="float">
+                        <p>-</p>
+                      </div>
+                      <div class="float">
+                        <input id="size_maximum_1" name="size_maximum_1" class="smallInput rating_updater" size="2" type="text">
+                        <br>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="padding-left:0px; padding-top:0;">
+                      <div class="float">
+                        <p>Length</p>
+                      </div>
+                    </td>
+                    <td style="padding-left:0px; padding-top:0;">
+                      <div class="float">
+                        <input id="size_minimum_2" name="size_minimum_2" class="smallInput rating_updater" size="2" type="text">
+                        <br>
+                      </div>
+                      <div class="float">
+                        <p>-</p>
+                      </div>
+                      <div class="float">
+                        <input id="size_maximum_2" name="size_maximum_2" class="smallInput rating_updater" size="2" type="text">
+                        <br>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="padding-left:0px; padding-top:0;">
+                      <div class="float">
+                        <p>Width</p>
+                      </div>
+                    </td>
+                    <td style="padding-left:0px; padding-top:0;">
+                      <div class="float">
+                        <input id="size_minimum_3" name="size_minimum_3" class="smallInput rating_updater" size="2" type="text">
+                        <br>
+                      </div>
+                      <div class="float">
+                        <p>-</p>
+                      </div>
+                      <div class="float">
+                        <input id="size_maximum_3" name="size_maximum_3" class="smallInput rating_updater" size="2" type="text">
+                        <br>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+            <td>
 
-            <span class="rating">
+              <span class="rating">
               <input class="rating-input rating_updater" id="processor-input-1-5" name="processor-input-1" value="5" type="radio">
               <label for="processor-input-1-5" class="rating-star"></label>
               <input class="rating-input rating_updater" id="processor-input-1-4" name="processor-input-1" value="4" type="radio">
@@ -176,10 +177,10 @@
               <label for="processor-input-1-1" class="rating-star"></label>
             </span>
 
-          </td>
-          <td>
+            </td>
+            <td>
 
-            <span class="rating">
+              <span class="rating">
               <input class="rating-input rating_updater" id="updates-input-1-5" name="updates-input-1" value="5" type="radio">
               <label for="updates-input-1-5" class="rating-star"></label>
               <input class="rating-input rating_updater" id="updates-input-1-4" name="updates-input-1" value="4" type="radio">
@@ -191,10 +192,10 @@
               <input class="rating-input rating_updater" id="updates-input-1-1" name="updates-input-1" value="1" type="radio" checked="checked">
               <label for="updates-input-1-1" class="rating-star"></label>
             </span>
-          </td>
-          <td>
+            </td>
+            <td>
 
-            <span class="rating">
+              <span class="rating">
               <input class="rating-input rating_updater" id="camera-input-1-5" name="camera-input-1" value="5" type="radio">
               <label for="camera-input-1-5" class="rating-star"></label>
               <input class="rating-input rating_updater" id="camera-input-1-4" name="camera-input-1" value="4" type="radio">
@@ -207,10 +208,10 @@
               <label for="camera-input-1-1" class="rating-star"></label>
             </span>
 
-          </td>
-          <td>
+            </td>
+            <td>
 
-            <span class="rating">
+              <span class="rating">
               <input class="rating-input rating_updater" id="battery-input-1-5" name="battery-input-2" value="5" type="radio">
               <label for="battery-input-1-5" class="rating-star"></label>
               <input class="rating-input rating_updater" id="battery-input-1-4" name="battery-input-2" value="4" type="radio">
@@ -223,89 +224,89 @@
               <label for="battery-input-1-1" class="rating-star"></label>
             </span>
 
-          </td>
-          <td>
-            <table>
-              <tbody>
-                <tr>
+            </td>
+            <td>
+              <table>
+                <tbody>
+                  <tr>
 
-                  <td>
-                    <div class="float">
-                      <input id="storage_minimum_1" name="size_minimum_1" class="smallInput rating_updater" size="2" type="text">
-                      <br>
-                    </div>
-                  </td>
-                  <td>
-                    <div class="float">
-                      <p>-</p>
-                    </div>
-                  </td>
-                  <td>
-                    <div class="float">
-                      <input id="storage_maximum_1" name="size_maximum_1" class="smallInput rating_updater" size="2" type="text">
-                      <br>
-                    </div>
-                  </td>
-                  <td>
-                    <div class="float">
-                      <p>GB</p>
-                    </div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </td>
-          <td>
-            <select id="sdSlotInput" class="rating_updater">
+                    <td style="padding-left:0px; padding-top:0;">
+                      <div class="float">
+                        <input id="storage_minimum_1" name="size_minimum_1" class="smallInput rating_updater" size="2" type="text">
+                        <br>
+                      </div>
+                    </td>
+                    <td style="padding-left:0px; padding-top:0;">
+                      <div class="float">
+                        <p>-</p>
+                      </div>
+                    </td>
+                    <td style="padding-left:0px; padding-top:0;">
+                      <div class="float">
+                        <input id="storage_maximum_1" name="size_maximum_1" class="smallInput rating_updater" size="2" type="text">
+                        <br>
+                      </div>
+                    </td>
+                    <td style="padding-left:0px; padding-top:0;">
+                      <div class="float">
+                        <p>GB</p>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+            <td>
+              <select id="sdSlotInput" class="rating_updater">
               <option value="" selected="selected"></option>
-              <option value="YES">YES</option>
-              <option value="NO">NO</option>
+              <option value="1">Yes</option>
+              <option value="0">No</option>
             </select>
-          </td>
-          <td>
-            <select id="jackInput" class="rating_updater">
+            </td>
+            <td>
+              <select id="jackInput" class="rating_updater">
               <option value="" selected="selected"></option>
-              <option value="YES">YES</option>
-              <option value="NO">NO</option>
+              <option value="1">Yes</option>
+              <option value="0">No</option>
             </select>
-          </td>
-          <td>
-            <select id="simCardInput" class="rating_updater">
+            </td>
+            <td>
+              <select id="simCardInput" class="rating_updater">
               <option value="" selected="selected"></option>
               <option value="1">1 SIM</option>
               <option value="2">2 SIM</option>
             </select>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div style="overflow-x:auto;" class="itemsdiv">
+      <table id="myTable" class="itemsTable">
+        <thead>
+          <tr>
+            <th style="min-width:85px">Price</th>
+            <th>Favorite</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th style="width:100%"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
   </div>
-
-  <div style="overflow-x:auto;" class="itemsdiv">
-    <table id="myTable" class="itemsTable">
-      <thead>
-        <tr>
-          <th style="min-width:85px">Price</th>
-          <th>Favorite</th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th style="width:100%"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-
 
 
 
