New prject structure

--- a/sites/about.html
+++ b/sites/about.html
@@ -7,8 +7,8 @@
   <meta name="googlebot" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script type="text/javascript" src="main.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <script type="text/javascript" src="../scripts/main.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
   <title>Smartphone-Picker</title>
@@ -17,7 +17,7 @@
 
 <body>
   <div style="text-align:left; margin-left: 15%;">
-    <a class="btn btn-link" href="index.html" style="font-size: 43.2px; text-decoration: none; color: #666;">
+    <a class="btn btn-link" href="../index.html" style="font-size: 43.2px; text-decoration: none; color: #666;">
                       smartphone-picker
                   </a>
   </div>
