--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="googlebot" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script type="text/javascript" src="main.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <script type="text/javascript" src="scripts/main.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
   <title>Smartphone-Picker</title>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="btn-group float">
-        <a class="btn btn-link" href="about.html">
+        <a class="btn btn-link" href="sites/about.html">
                           About
                       </a>
       </div>
