--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
-  <title>Smartphone-Picker</title>
+  <title>smartphone-picker</title>
 
 </head>
 
 <body>
   <div style="text-align:left; margin-left: 15%;">
     <a class="" href="index.html" style="font-size: 43.2px; text-decoration: none; color: #666;">
-                      Smartphone-picker
+                      smartphone-picker
                   </a>
   </div>
   <div class="main-menu">
@@ -39,7 +39,7 @@
     </div>
   </div>
   <div class="description">
-    <p><span style="">Smartphone-picker helps you choose your next smartphone in this crowded market. Filter the hand-curated list to your liking and click a smartphone to show it's specs.</span></p>
+    <p><span style="">smartphone-picker helps you choose your next smartphone in this crowded market. Filter the hand-curated list to your liking and click a smartphone to show it's specs.</span></p>
   </div>
   <div class="bodydiv">
 
