--- a/sites/about.html
+++ b/sites/about.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
-  <title>Smartphone-Picker</title>
+  <title>smartphone-picker</title>
 
 </head>
 
